[tool.poetry]
name = "course5"
version = "0.1.0"
description = ""
authors = ["Pavel Gornostaev <pavelgornostaeff@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
